# digital-identity-system

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DETAILED_START.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  go.work  go.work.sum  run_wallet.sh  setup.sh  sonar-project.properties
.github/ISSUE_TEMPLATE/: improvement-proposal.md
.github/workflows/: premerge-check.yml
api/: .env  Dockerfile  go.mod  go.sum  main.go
api/sqlite/: DigitalIdentity.db
api/src/: app_config.go  main.go  utils.go
blockchain-client/: .gitignore  Dockerfile  go.mod  go.sum  main.go
blockchain-client/src/: main.go  zkp.go  zkp_test.go
blockchain-client/test/: zkp_test.go
clients/: main.py  pyproject.toml
clis/api-test/: main.go
dev_tools/clients/: main.py
dev_tools/scripts/: go.mod  go.sum  gorm_test.go  gormtest.go  run.sh  setup_test_db.sh  smart_contract.sh  solana_read.sh  swagger_docs.sh  test_runner.sh
dev_tools/verifier/: main.py  requirements.txt
rabbitmq/: Dockerfile  add_user.sh  rabbitmq.conf  run_rabbitmq.sh
rev-proxy/: nginx.conf
system/api/: Dockerfile  config.json  go.mod  go.sum  go.work.sum
system/blockchain-client/: Dockerfile  config.json  go.mod  go.sum  go.work  go.work.sum
system/pkg/: go.mod  go.sum
system/rabbitmq/: Dockerfile  definitions.json  rabbitmq.conf
system/rev-proxy/: Dockerfile  nginx.conf
system/smart-contract/: .gitignore
system/smart-contract/program/: Cargo.toml
system/smart-contract/program/src/: lib.rs
system/zk-wallet-go/: README.md  auth_handlers.go  (+14 more)
(+205 files in other folders)
