[package]
name = "program"
version = "0.1.0"
edition = "2018"

[features]
# https://docs.solana.com/developing/on-chain-programs/developing-rust#project-layout
#
# When toggled on this feature will cause the crate to not compile a
# bpf entrypoint.
#
# See the corresponding `#[cfg(not(feature = "exclude_entrypoint"))]`
# in lib.rs. This is needed so that other Solana programs can import
# helper functions from this library without causing symbol conflicts
# with our entrypoint.
exclude_entrypoint = []
# These are injected by the Solana SDK tooling; defining them silences cfg warnings.
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "1"
borsh = { version = "1.6.0", features = ["derive"] }

[lib]
name = "identity_app"
crate-type = ["cdylib", "lib"]
